for old plugins now adds separator in menu before adding plugin task menu items